--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start:backend": "cd packages/backend && npm run start:dev",
     "build:frontend": "cd packages/frontend && npm run build",
     "build:backend": "cd packages/backend && npm run build",
-    "build": "npm run build:frontend && npm run build:backend",
+    "build:all": "npm run build:frontend && npm run build:backend",
+    "start:backend:prod": "cd packages/backend && npm run start:prod",
+    "deploy": "npm run build:all && npm run start:backend:prod",
     "start": "cd packages/backend && npm run start"
   }
 }
