--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "deploy": "npm run build:all && npm run start:backend:prod",
     "start": "cd packages/backend && npm run start",
     "deploy:prod": "NODE_ENV=production npm run build:all && NODE_ENV=production npm run start:backend:prod",
-    "install:all": "npm install && cd packages/frontend && npm install && cd ../backend && npm install",
-    "deploy:full": "npm run install:all && npm run build:frontend && npm run build:backend && npm run start:backend:prod",
-    "deploy:full:prod": "NODE_ENV=production npm run install:all && NODE_ENV=production npm run build:frontend && NODE_ENV=production npm run build:backend && NODE_ENV=production npm run start:backend:prod"
+    "prod": "npm install && npm run build:all && NODE_ENV=production npm run start:backend:prod"
   }
 }
